tests/sksl/errors/SpuriousFloat.dsl.glsl
### Compilation failed:

error: expected ';', but found '2.5'

1 error
